// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeginCourseButton snapshot disabled snapshot 1`] = `
<ActionButton
  as="a"
  disabled={true}
  href="#"
  onClick={
    {
      "trackCourseEvent": {
        "cardId": "cardId",
        "eventName": [MockFunction segment.enterCourseClicked],
        "url": "home-urlexec-ed-tracking-path=cardId",
      },
    }
  }
>
  Begin Course
</ActionButton>
`;

exports[`BeginCourseButton snapshot enabled snapshot 1`] = `
<ActionButton
  as="a"
  disabled={false}
  href="#"
  onClick={
    {
      "trackCourseEvent": {
        "cardId": "cardId",
        "eventName": [MockFunction segment.enterCourseClicked],
        "url": "home-urlexec-ed-tracking-path=cardId",
      },
    }
  }
>
  Begin Course
</ActionButton>
`;
